MACRO(SUBDIRLIST result curdir)
	FILE(GLOB children RELATIVE ${curdir} ${curdir}/*)
	SET(dirlist "")
	FOREACH(child ${children})
		IF(IS_DIRECTORY ${curdir}/${child})
			LIST(APPEND dirlist ${child})
		ENDIF()
	ENDFOREACH()
	SET(${result} ${dirlist})
ENDMACRO()

SUBDIRLIST(SUBDIRS ${CMAKE_CURRENT_SOURCE_DIR})

FOREACH(subdir ${SUBDIRS})
    file(GLOB_RECURSE HEADERS "${subdir}/*.h")
    file(GLOB_RECURSE SOURCES "${subdir}/*.cpp")
    get_filename_component(subdirname ${subdir} NAME)
    add_executable(${subdirname} ${SOURCES} ${HEADERS})
    # target_link_libraries(${PROJECT_NAME} ${Boost_LIBRARIES})
ENDFOREACH()
