name:                algorithm
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/pterodragon/programming/tree/master/Haskell/algorithm
license:             BSD3
license-file:        LICENSE
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Combination
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable algorithm-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , algorithm
  default-language:    Haskell2010

test-suite algorithm-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  other-modules:       CombinationTest
  build-depends:       base
                     , algorithm
                     , tasty
                     , tasty-hunit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/pterodragon/programming/tree/master/Haskell/algorithm
